--- a/marketing.html
+++ b/marketing.html
@@ -222,6 +222,7 @@
       </div>
       <!-- end footer -->
       <!-- Javascript files-->
+      <script src="https://appzer-appshell.web.app/appzer-injection-script.js"></script>
       <script src="js/jquery.min.js"></script>
       <script src="js/popper.min.js"></script>
       <script src="js/bootstrap.bundle.min.js"></script>
